@@ -1,4 +1,4 @@
-	LIST	P=17C44,R=HEX
+	LIST	P=17C44
 
 MAXROM = 01FFF
 MAXRAM = 00FF
